<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drinkster</string>
    <string name="action_settings">Settings</string>
	<string name="drink_title_hint">Please Select Drink</string>
	<string name="drink_photo_text">Snap a Pic of Your Drink!</string>
	<string name="days_title">Drinking Days</string>
	<string name="drinks_title">Drinks</string>
	<string name="drink_title_label">Drink Name</string>
	<string name="drink_photo_label">Photo</string>
	<string name="new_drink">New Drink</string>
	<string name="delete_drink">Delete Drink</string>
	<string name="time_picker_title">When did you have your drink?</string>
	<string name="drink_time">Set Time</string>
	<string name="new_drink_day">New Drink Day</string>
	<string name="delete_drink_day">Delete</string>
	<string name="add_drink_photo">Add Photo</string>
	<string name="delete_drink_photo">Delete Photo</string>
	<string name="drink_count">Drinks</string>
	<string name="user_name">Name</string>
	<string name="user_male">Male</string>
	<string name="user_female">Female</string>
	<string name="user_weight">Weight</string>
	<string name="user_gender">Gender</string>
	<string name="save_button">Save</string>
	<string name="delete_button">Delete</string>
	<string name="confirm_button">Confirm</string>
	<string name="user_profile_incomplete">Note: Please enter your name and weight.</string>
	<string name="start_drinking">Start Drinking</string>
	<string name="cancel">Cancel</string>
	<string name="profile_incomplete_title">Complete your profile to get BAC</string>
	<string name="profile_incomplete_OK_button">Edit Profile</string>
	<string name="standard_drink_beer"><b>5% Alc</b> \n 100  Cals \n 12 fl oz</string>
	<string name="standard_drink_wine"><b>12% Alc</b> \n 125  Cals \n 5 fl oz</string>
	<string name="standard_drink_liquor"><b>40% Alc</b> \n 97  Cals \n 1.50 fl oz</string>
	<string name="agree_button">Accept</string>
	<string name="disagree_button">Decline</string>
	<string name="drawer_open">Open drawer</string>
	<string name="drawer_close">Close drawer</string>
	<string name="yes_string">Yes</string>
	<string name="no_string">No</string>
	<string name="drinking_sessions">Sessions</string>
	<string name="drinks">Drinks</string>
	
	
	<string-array name="custom_drink_array">
	    <item>Regular Beer</item>
	    <item>Light Beer</item>
	    <item>Strong Beer</item>
	    <item>Margarita</item>
	    <item>Mimosa</item>
	    <item>Bloody Mary</item>
	    <item>Long Island</item>
	    <item>Rum &amp; Coke</item>
	    <item>Gin &amp; Tonic</item>
	    <item>Vodka Soda</item>
	    <item>Sake Bomb</item>
	</string-array>
	
	<string-array name="custom_beer_array">
	    <item>Regular Beer</item>
	    <item>Light Beer</item>
	    <item>Strong Beer</item>	
    </string-array>
    
	<string-array name="custom_wine_array">
	    <item>Red Wine</item>
	    <item>White Wine</item>	
    </string-array>
    
	<string-array name="custom_liquor_array">
	    <item>Liquor Shot</item>
	    <item>Margarita</item>
	    <item>Mimosa</item>
	    <item>Bloody Mary</item>
	    <item>Long Island</item>
	    <item>Rum &amp; Coke</item>
	    <item>Gin &amp; Tonic</item>
	    <item>Vodka Soda</item>
	</string-array>
	
	<string-array name="nav_drawer_titles">
	    <item>Home</item>
	   	<item>Profile</item>
	</string-array>
	
</resources>
