<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/drink_title_label"
       style="?android:listSeparatorTextViewStyle"
       android:textColor="#ffffff" />
  -->]
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal" >
        
        <TextView 
	        android:id="@+id/drink_titleTextView"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:inputType="textCapWords"
	        android:gravity="center_vertical"
	        android:layout_marginRight="4dp"
	        android:padding="4dp"
	        android:textStyle="bold"
	        android:layout_weight="1"
	        android:background="@drawable/textview_underline"
	        android:textSize="26dp"
	        android:textColor="#FFCC11"
	        android:hint="@string/drink_title_hint" />
	    
	    <Button
	        android:id="@+id/drink_timeButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight="8dp"
	        android:paddingLeft="8dp"
	        android:background="@drawable/green_button_shape_not_shadowed"
	        android:textSize="18dp"
		    android:textColor="#ffffff"
	        android:text="@string/drink_time" />
	</LinearLayout>     
	
	<LinearLayout 
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp" >
        
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:layout_marginRight="4dp"
		    android:layout_marginLeft="4dp"
		    android:layout_marginTop="4dp"
	        android:orientation="vertical">
	        
		    <Button
		        android:id="@+id/drink_beerButton"
		        style="@style/DrinkDetailsButton"
		        android:text="Beer" />
		    
		    <TextView 
		        android:id="@+id/drink_beerTextViewButton"
				style="@style/DrinkDetailsTextView"
		        android:text="@string/standard_drink_beer"/>
		    </LinearLayout>
		    
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:layout_marginRight="4dp"
		    android:layout_marginLeft="4dp"
		    android:layout_marginTop="4dp"
	        android:orientation="vertical">
		    
		    <Button
		        android:id="@+id/drink_wineButton"
		        style="@style/DrinkDetailsButton"
		        android:text="Wine" />
		    
		    <TextView 
		        android:id="@+id/drink_wineTextViewButton"
				style="@style/DrinkDetailsTextView"
		        android:text="@string/standard_drink_wine"/>
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:layout_marginRight="4dp"
		    android:layout_marginLeft="4dp"
		    android:layout_marginTop="4dp"
	        android:orientation="vertical">
		    
		    <Button
		        android:id="@+id/drink_liquorButton"
				style="@style/DrinkDetailsButton"
		        android:text="Liquor" />
		    
		    <TextView 
		        android:id="@+id/drink_liquorTextViewsButton"
				style="@style/DrinkDetailsTextView"
		        android:text="@string/standard_drink_liquor"/>
	    </LinearLayout>
	    
	    
	</LinearLayout>   
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginTop="8dp"
	    android:background="@color/dodgerblue" >
	    <TextView
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/drink_photo_label"
	       style="?android:listSeparatorTextViewStyle"
	       android:textColor="#ffffff" />
	    
	     <LinearLayout 
	        android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_weight="3"
		    android:layout_marginTop="4dp"
		    android:gravity="center"
		    android:padding="4dp" >
	        
		    <ImageView
		        android:id="@+id/drink_imageView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:scaleType="centerInside"
	       	 	android:background="#FFCC11"
	      		android:padding="2dp"
				android:adjustViewBounds="true"
				android:cropToPadding="true"
				android:src="@drawable/logo_drink_fragment_pink"/>
		    
	    </LinearLayout>
	    
	     <LinearLayout
	        android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="horizontal"
		    android:layout_weight="6"
		    android:gravity="center" >
		    
			<ImageButton 
			    android:id="@+id/drink_photo_delete_button"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@android:drawable/ic_menu_delete"  
			    android:contentDescription="@string/delete_drink_photo"/>
		 	    
		    <ImageButton
			    android:id="@+id/drink_photo_button"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:src="@android:drawable/ic_menu_camera"
			    android:contentDescription="@string/add_drink_photo" /> 
	
			
		</LinearLayout>
		
	    <Button
	        android:id="@+id/drink_saveButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="4dp"
	        android:textColor="@color/white"
	        android:background="@drawable/green_button_shape_not_shadowed"
	        android:text="@string/save_button" />
	</LinearLayout>		
</LinearLayout>