<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dodgerblue" 
    android:gravity="center"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFCC11"
        android:textSize="52sp"
        android:textStyle="bold"
        android:text="@string/profile" />
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:orientation="vertical">
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	
	        <TextView
	            android:id="@+id/user_name_textView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/user_name"
	            android:textColor="#FFFFFF"
	            android:textSize="22sp"
	            android:textStyle="bold" />
			
			<EditText
				android:id="@+id/user_name_editText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="22sp"
			    android:textColor="#FFCC11"
			    android:inputType="textCapSentences"
			    android:hint="Enter First Name"/>
	    </LinearLayout>	
		
			
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:orientation="horizontal">
			
			<TextView 
			    android:id="@+id/user_weight_textView"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="22sp"
			    android:textStyle="bold"
			    android:textColor="#FFFFFF"
			    android:text="@string/user_weight"/>
			
			<EditText
				android:id="@+id/user_weight_editText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="22sp"
			    android:textColor="#FFCC11"
			    android:inputType="number"
			    android:hint="Enter Weight (Lbs)"/>
		</LinearLayout>
	
		<RadioGroup
		    android:id="@+id/radioGender"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:layout_gravity="center"
	        android:orientation="horizontal">
		        
		    			    
			<RadioButton
			    android:id="@+id/user_female_radioButton"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="22sp"
			    android:textStyle="bold"
			    android:textColor="#FFFFFF"
			    android:checked="true"
			    android:text="@string/user_female" />		
			    
	    	<RadioButton
			    android:id="@+id/user_male_radioButton"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="22sp"
			    android:textStyle="bold"
			    android:textColor="#FFFFFF"
			    android:text="@string/user_male" />

			        	
    	</RadioGroup>
    
	</LinearLayout>
		
		<Button 
		    android:id="@+id/user_done_button"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textColor="#FFCC11"
		    android:layout_margin="12dp"
		    android:textStyle="bold"
		    android:text="@string/save_button" />
		
		<TextView 
			    android:id="@+id/user_weight_warning_textView"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textStyle="bold"
			    android:textColor="#FFFFFF"
			    android:visibility="invisible"
			    android:text="@string/user_weight_warning"/>
		
</LinearLayout>